syntax = "proto3";
option go_package = "proto/;filesync";

service FileSyncService {
    rpc SyncFile (stream FileSyncRequest) returns (stream FileSyncResponse);
    rpc ExchangeMetadata (stream MetadataRequest) returns (stream MetadataResponse);
    rpc RequestChunks (stream ChunkRequest) returns (stream ChunkResponse);
}

message FileSyncRequest {
    oneof request {
        FileChunk file_chunk = 1;
        FileDelete file_delete = 2;
        FileTruncate file_truncate = 3;
    }
}

message FileSyncResponse {
    string message = 1;
}

message FileChunk {
    string file_name = 1;
    bytes chunk_data = 2;
    int64 offset = 3;
    bool is_new_file = 4;
    int64 total_chunks = 5;
    int64 total_size = 6;
}

message FileDelete {
    string file_name = 1;
}

message FileTruncate {
    string file_name = 1;
    int64 size = 2;
}

message MetadataRequest {
    string file_name = 1;
}

message MetadataResponse {
    string file_name = 1;
    repeated ChunkMetadata chunks = 2;
}

message ChunkMetadata {
    int64 offset = 1;
    string hash = 2;
}

message ChunkRequest {
    string file_name = 1;
    repeated int64 offsets = 2;
}

message ChunkResponse {
    string file_name = 1;
    int64 offset = 2;
    bytes chunk_data = 3;
}
